Fixes tooltip not showing if mouse is over it

--- a/src/common/components/Tooltip/styles.less
+++ b/src/common/components/Tooltip/styles.less
@@ -16,7 +16,6 @@
   text-align: left;
   border-radius: 2px;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, @tooltip-opacity);
-  pointer-events: none;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, @tooltip-opacity);
   color: @gray;
   background-size: 630px 647px;
